Add loading category to PaintTiming trace events

BUG=711144
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2814123004
Cr-Commit-Position: refs/heads/master@{#464319}

Former-commit-id: 286fb9be7c5d37cc6b234cfd333053b09a1106d4